data/derived/fa15/progs/unify/prog0230.ml.out
Characters 74-77:
  | (h,t) -> if t = false then h else f h;;
                                      ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
